--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,19 @@
 }
 
 .encabezado {
-    grid-area: encabezado;
-    
+    align-items: center;
+
+    display: flex;
+    grid-area:encabezado;
+    padding: 0 2rem;
+}
+.menu__link{
+    color:#333333;
+    font-size: 1.4rem;
+    padding: .5rem 1rem;
+}
+.menu__link:hover, .menu__link:active{
+    border-bottom: 2px solid #0073e6;
 }
 .contenido {
     grid-area: contenido;
