--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     "contenido"
     "footer";
     grid-template-columns: auto;
-    grid-template-rows: 50px 100vh auto;
+    grid-template-rows: 50px auto auto;
     
 }
 
@@ -28,9 +28,15 @@
 }
 .contenido {
     grid-area: contenido;
+    padding: 0 2rem;
 }
 
 .footer { 
-
+    background: #f1f1f1;
+    font-size: 1.3rem;
+    color:rgb(110, 27, 92);
     grid-area: footer;
+    padding: 1rem;
+    text-align: center;
+
 }
